--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,10 @@ build/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+# Emacs
+#*#
+*~
+
+# Secrets
+secrets.sh
