Use new version lsst-git-lfs-s3 and add passenger.
	modified:   Gemfile
	modified:   Gemfile.lock
	new file:   Passengerfile.json
	modified:   git-lfs-s3-server.rb
	modified:   secrets.sh.dist

--- a/secrets.sh.dist
+++ b/secrets.sh.dist
@@ -5,3 +5,4 @@ export S3_BUCKET={YOUR_S3_BUCKET}
 export PORT=8080
 export PROTOCOL=http
 export LFS_SERVER_URL=$PROTOCOL://server:$PORT
+export LFS_PUBLIC_SERVER=true
