Update environment variables. Default to safer options.
	modified:   extras/secrets.conf.dist
	modified:   extras/secrets.sh.dist

--- a/extras/secrets.conf.dist
+++ b/extras/secrets.conf.dist
@@ -5,4 +5,5 @@ env S3_BUCKET={YOUR_S3_BUCKET};
 env PORT=8080;
 env PROTOCOL=http;
 env LFS_SERVER_URL=http://server:8080;
-env LFS_PUBLIC_SERVER=true;
+env LFS_PUBLIC_SERVER=false;
+env LFS_CEPH_S3=false;
