--- a/extras/secrets.sh.dist
+++ b/extras/secrets.sh.dist
@@ -5,4 +5,5 @@ export S3_BUCKET={YOUR_S3_BUCKET}
 export PORT=8080
 export PROTOCOL=http
 export LFS_SERVER_URL=$PROTOCOL://server:$PORT
-export LFS_PUBLIC_SERVER=true
+export LFS_PUBLIC_SERVER=false
+export LFS_CEPH_S3=false
