Add merged and updated Gemfile and nginx conf.
	modified:   Gemfile
	modified:   Gemfile.lock
	modified:   extras/git-lfs-s3-server.conf

--- a/extras/git-lfs-s3-server.conf
+++ b/extras/git-lfs-s3-server.conf
@@ -1,12 +1,12 @@
 server {
     listen 80;
-    server_name git-lfs-test.lsst.codes;
-    return 301 https://git-lfs-test.lsst.codes$request_uri;
+    server_name git-lfs.lsst.codes;
+    return 301 https://git-lfs.lsst.codes$request_uri;
 }
 
 server {
     listen 443;
-    server_name git-lfs-test.lsst.codes;
+    server_name git-lfs.lsst.codes;
 
     ssl on;
     ssl_session_cache shared:SSL:10m;
@@ -19,13 +19,13 @@ server {
     ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
     ssl_prefer_server_ciphers on;
 
-    ssl_certificate /etc/ssl/lsst.codes.pem;
-    ssl_certificate_key /etc/ssl/lsst.codes.key;
+    ssl_certificate /etc/ssl/certs/lsst.codes_chain.pem;
+    ssl_certificate_key /etc/ssl/private/lsst.codes.key;
     ssl_dhparam /etc/ssl/certs/dhparam.pem;
 
     ssl_stapling on;
     ssl_stapling_verify on;
-    resolver 8.8.4.4 8.8.8.8 valid=300s;
+    resolver 8.8.4.4 8.8.8.8 valid=600s;
     resolver_timeout 10s;
 
     spdy_keepalive_timeout 300;
