Use the LFS_CEPH_ENDPOINT environment variable instead of hardcoding the endpoint.
    * Use the Gemfiles to use the new library that supports this environment variable.
    * Update distributable secrets templates to include this variable.
    * Update the ruby to use this instead of hardcoing the endpoint in
      Aws.config directly..

	modified:   Gemfile
	modified:   Gemfile.lock
	modified:   extras/secrets.conf.dist
	modified:   extras/secrets.sh.dist
	modified:   git-lfs-s3-server.rb

--- a/extras/secrets.conf.dist
+++ b/extras/secrets.conf.dist
@@ -7,3 +7,4 @@ env PROTOCOL=http;
 env LFS_SERVER_URL=http://server:8080;
 env LFS_PUBLIC_SERVER=false;
 env LFS_CEPH_S3=false;
+env LFS_CEPH_ENDPOINT={YOUR_CEPH_ENDPOINT_WITH_PROTOCOL};
