--- a/extras/secrets.sh.dist
+++ b/extras/secrets.sh.dist
@@ -7,3 +7,4 @@ export PROTOCOL=http
 export LFS_SERVER_URL=$PROTOCOL://server:$PORT
 export LFS_PUBLIC_SERVER=false
 export LFS_CEPH_S3=false
+export LFS_CEPH_ENDPOINT={YOUR_CEPH_ENDPOINT_WITH_PROTOCOL}
