--- a/extras/secrets.sh.dist
+++ b/extras/secrets.sh.dist
@@ -2,9 +2,7 @@ export AWS_REGION={YOUR_AWS_REGION}
 export AWS_ACCESS_KEY_ID={YOUR_AWS_ACCESS_KEY_ID}
 export AWS_SECRET_ACCESS_KEY={YOUR_AWS_SECRET_ACCESS_KEY}
 export S3_BUCKET={YOUR_S3_BUCKET}
-export PORT=8080
-export PROTOCOL=http
-export LFS_SERVER_URL=$PROTOCOL://server:$PORT
+export LFS_SERVER_URL=http://server:8080
 export LFS_PUBLIC_SERVER=false
 export LFS_CEPH_S3=false
 export LFS_CEPH_ENDPOINT={YOUR_CEPH_ENDPOINT_WITH_PROTOCOL}
