[DM-4233] Fix OCSP stapling in nginx conf.
	modified:   extras/git-lfs-s3-server.conf

--- a/extras/git-lfs-s3-server.conf
+++ b/extras/git-lfs-s3-server.conf
@@ -21,6 +21,7 @@ server {
 
     ssl_certificate /etc/ssl/certs/lsst.codes_chain.pem;
     ssl_certificate_key /etc/ssl/private/lsst.codes.key;
+    ssl_trusted_certificate /etc/ssl/certs/lsst.codes_root_chain.pem;
     ssl_dhparam /etc/ssl/certs/dhparam.pem;
 
     ssl_stapling on;
