Add panopticon_stub_status location.
	modified:   extras/git-lfs-s3-server.conf

--- a/extras/git-lfs-s3-server.conf
+++ b/extras/git-lfs-s3-server.conf
@@ -34,7 +34,11 @@ server {
     add_header X-Frame-Options DENY;
     add_header X-Content-Type-Options nosniff;
 
-    root /opt/lsst/git-lfs-s3-server/public;
+    root /opt/git-lfs-s3-server/public;
 
     passenger_enabled on;
+
+    location /panopticon_stub_status {
+	stub_status;
+    }
 }
