whitelist REDIS_SERVICE_{HOST,PORT} env vars under nginx

--- a/docker/etc/nginx/main.d/lfs-secrets.conf
+++ b/docker/etc/nginx/main.d/lfs-secrets.conf
@@ -5,3 +5,6 @@ env AWS_REGION;
 env S3_BUCKET;
 env LFS_SERVER_URL;
 env LFS_PUBLIC_SERVER=true;
+
+env REDIS_SERVICE_HOST;
+env REDIS_SERVICE_PORT;
