--- a/docker/etc/nginx/sites-available/lfs.conf
+++ b/docker/etc/nginx/sites-available/lfs.conf
@@ -7,7 +7,6 @@ server {
     passenger_user app;
     passenger_ruby /usr/bin/ruby2.5;
 
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
+    set_real_ip_from    10.0.0.0/8;
+    real_ip_header      X-Forwarded-For;
 }
